# bytovy-lovec

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt  setup.py
automations/: generate_new_scraper.py  reinstall_shared.py
automations/templates/pipeline/: pipeline_name.pyt  prefect.yaml
automations/templates/scraper/: pyproject.toml  scraper_class.pyt
database_definition/: main.py  readme.md
database_definition/models/cloud_infrastructure/: models.py
database_definition/models/real_estate_listings/: models.py
database_definition/models/real_estate_trackers/: models.py
database_definition/models/sales/: models.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: lower_and_unaccent_array.sql  match_with_null_check.sql
dbt/models/staging/: _stg_raw__models.yml  _stg_raw__sources.yml  stg_raw__analysed_real_estate_ads.sql  stg_raw__listing_tracker.sql
pipelines/archer_reality_pipeline/: archer_reality_pipeline.py  prefect.yaml
pipelines/bezrealitky_scraper_pipeline/: bezrealitky_scraper_pipeline.py  prefect.yaml
pipelines/daily_summary_pipeline/: daily_summary_pipeline.py  prefect.yaml
pipelines/dbt_pipeline/: prefect.yaml  run_dbt_pipeline.py
pipelines/mm_reality_pipeline/: mm_reality_pipeline.py  prefect.yaml
pipelines/monitor_pipelines/: monitor_pipelines.py  prefect.yaml  test.py
pipelines/notify_trackers_pipeline/: notify_trackers_pipeline.py  prefect.yaml
pipelines/process_ad_data_with_llm_pipeline/: prefect.yaml  process_raw_ads_pipeline.py
pipelines/process_raw_ads_pipeline/: process_raw_ads_pipeline.py
pipelines/reality_idnes_scraper_pipeline/: prefect.yaml  reality_idnes_scraper_pipeline.py
pipelines/sreality_scraper_pipeline/: Dockerfile  prefect.yaml  sreality_scraper_pipeline.py
pipelines/svoboda_williams_pipeline/: prefect.yaml  svoboda_williams_pipeline.py
shared/ai_client/: ai_client.py  pyproject.toml
shared/archer_reality_scraper/: archer_reality_scraper.py  pyproject.toml
shared/base_ad_scraper/: base_ad_scraper.py  pyproject.toml
shared/bezrealitky_scraper/: bezrealitky_scraper.py  pyproject.toml
shared/dbt_runner/: dbt_runner.py  pyproject.toml
shared/email_bot/: email_bot.py  pyproject.toml
shared/mm_reality_scraper/: mm_reality_scraper.py  pyproject.toml
shared/pipeline_utlis/: db.py
shared/postgres_client/: postgres_client.py  pyproject.toml  readme.md
shared/reality_idnes_scraper/: pyproject.toml  reality_idnes_scraper.py
shared/rental_ad_schema/: pyproject.toml  rental_ad_schema.py
shared/sreality_scraper/: pyproject.toml  sreality_scraper.py
shared/svoboda_williams_scraper/: pyproject.toml  svoboda_williams_scraper.py
web_ui/: app.py  app_2.py  json.json
web_ui/templates/: index.html
(+19 files in other folders)
